# trisigma-legacy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli/tris_cli/: __main__.py
cli/tris_cli/builtins/: __init__.py  cache.py  orders.py  service.py  tail.py
scripts/: agenthc  parselog  rlog  tris
trisigma/: __init__.py
trisigma/api/: base.py  command.py  const.py  contract.py  dtype.py  entity.py  error.py  files.py  flag.py  interactor.py  irepo.py  lib.py  middleware.py  policy.py  primary.py  repo.py  secondary.py  value.py
trisigma/app/admin/interactor/: service_reporter.py
trisigma/app/analysis/interactor/: candle_window.py  candle_window_feed.py  market_analytics_listener.py  market_analytics_publisher.py
trisigma/app/brokerage/interactor/: account_data_publisher.py  async_order_executor.py  brokerage_server.py  price_publisher.py
trisigma/domain/admin/base/: service_reporter.py
trisigma/domain/admin/entity/: service.py
trisigma/domain/admin/policy/: __init__.py
trisigma/domain/admin/repository/: service_repository.py
trisigma/domain/analysis/contract/: __init__.py
trisigma/domain/analysis/dtype/: __init__.py
trisigma/domain/analysis/entity/: __init__.py  instrument.py
trisigma/domain/analysis/error/: __init__.py
trisigma/domain/analysis/lib/: duration.py  integrity.py
trisigma/domain/analysis/value/: __init__.py  agg.py  time.py  window.py
trisigma/domain/brokerage/entity/: __init__.py  account.py  order.py  order_request.py  portfolio.py  receipt.py
trisigma/infra/common/: __init__.py
(+66 files in other folders)
